Had issues with the flex. Remember that flex covers 1st child

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,19 +1,27 @@
 .header  {
   font-family: monospace;
-  background: papayawhip;
+  background: blue;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
 }
 
 .logo {
   font-size: 48px;
   font-weight: 900;
-  color: tomato;
+  color: orange;
   background: white;
-  padding: 4px 32px;
+  padding: 4px 32px;  
 }
 
 ul {
   /* this removes the dots on the list items*/
-  list-style-type: none;
+  list-style-type: none; 
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
@@ -23,3 +31,4 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
